[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/gameplay/Portal.gd" type="Script" id=1]
[ext_resource path="res://assets/audio/sfx/final-portal-warp.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/audio/sfx/warp-in-maybe-3.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/audio/sfx/opendoor.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 3 )

[node name="Portal" type="Node2D"]
script = ExtResource( 1 )

[node name="SpinTimer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 3 )
shape = SubResource( 1 )

[node name="ExpandTimer" type="Timer" parent="."]
wait_time = 0.01
autostart = true

[node name="PortalCreatedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "SFX Low Pass"

[node name="FinalPortal" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "SFX Low Pass"

[node name="WarpIn" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "SFX Low Pass"
[connection signal="timeout" from="SpinTimer" to="." method="_on_SpinTimer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="ExpandTimer" to="." method="_on_ExpandTimer_timeout"]
